<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FBF8F8"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/videochat"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/vigo_chat"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
               android:drawablePadding="20dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/envelope"
                android:hint="@string/email_adress"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:autofillHints="0"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/password"
                android:drawablePadding="20dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:autofillHints="0" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btnshape"
                android:text="@string/login" />

            <Button
                android:id="@+id/accountcreatebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btnshape"
                android:text="@string/create_an_account" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>